--- a/css/home.css
+++ b/css/home.css
@@ -58,6 +58,7 @@
   font-weight: 600;
   cursor: pointer;
   transition: all 0.5s ease;
+  margin-left: 10px;
 }
 .cv-btn a:hover {
   background-color: #fff;
